# learn-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  renovate.json5
.github/: README.md  copilot-instructions.md  kind-config.yaml  sample-env.yaml
.github/workflows/: full-workflow.yml
k8s/: install.yaml  ks.yaml
k8s/app/: helmrelease.yaml  kustomization.yaml  labels.yaml
k8s/chart/: Chart.yaml  values.yaml
k8s/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/chart/tests/: configmap_test.yaml  deployment_test.yaml  hpa_test.yaml  httproute_test.yaml  networkpolicy_test.yaml  pvc_test.yaml  secret_test.yaml  service_test.yaml
scripts/: README.md  e2e-test.sh  integration-test.sh  smoke-test.sh
src/: handlers.rs  main.rs  metrics.rs  middleware.rs  models.rs  openapi.rs  telemetry.rs  tests.rs
