[package]
name = "learn-rust"
version = "0.0.1"
edition = "2021"
authors = ["dxas90"]
description = "A simple Rust microservice for learning Kubernetes, Docker, and modern Rust development practices"
license = "MIT"
repository = "https://github.com/dxas90/learn-rust"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client and types
hyper = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System information
sysinfo = "0.32"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Runtime version info
rustc_version_runtime = "0.3"

# Lazy static for metrics
lazy_static = "1.4"

# OpenTelemetry (optional)
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
default = ["metrics", "telemetry"]
telemetry = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]
metrics = ["prometheus"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
